Fix home title and card clipping

--- a/src/pages/HomeLandingPage.css
+++ b/src/pages/HomeLandingPage.css
@@ -3108,7 +3108,7 @@
   }
 
   .home-showcase-side article:nth-child(2) {
-    height: 150px;
+    height: 158px;
   }
 
   .home-showcase-side article,
